rate plan page css bug fix account details now has current barring level

--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -11161,3 +11161,12 @@ div.component-collections-scenario > table.reflex
 {
 	margin	: 0.5em;
 }
+
+/************************** START - Rate Plan List - START **************************/
+
+.plan-list-brochure-icons
+{
+	white-space	: nowrap;
+}
+
+/************************** END - Rate Plan List - END **************************/
