--- a/html/admin/css/style.css
+++ b/html/admin/css/style.css
@@ -9409,11 +9409,13 @@ div.component-collections-scenario > table.reflex
 .component-collections-severity-transfer > ul.reset.horizontal
 {
 	margin	: 0em;
+	height	: 9em;
 }
 
 .component-collections-severity-transfer > ul.reset > li
 {
-	vertical-align	: middle;
+	vertical-align	: top;
+	height			: 100%;
 }
 
 .component-collections-severity-transfer > ul.reset > li:first-child,
@@ -9424,7 +9426,7 @@ div.component-collections-scenario > table.reflex
 
 .component-collections-severity-transfer-buttons
 {
-	margin-right	: 0.5em;
+	margin	: 2.5em 0.2em 0em 0em;
 }
 
 .component-collections-severity-warning-message
